--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 		<script type="text/javascript" src="script.js"></script>
 	</head>
 	<body onload="loaded();">
+		<p>Bian Qian</p>
 		<a id="link" href="http://confsitonew.maxapp.eu/app"></a>
 	</body>
 </html>
