--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,6 @@
 	</head>
 	<body onload="loaded();">
 		<p>Bian Qian</p>
-		<a id="link" href="http://confsitonew.maxapp.eu/app"></a>
+		<a id="link" href="http://confsitonew.maxapp.eu/app">App</a>
 	</body>
 </html>
