--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</p>
 		
 		<input type="button" id="centra" value="Accedi" onclick="apriApp();" style="display:none;margin-top: 150px; height: 50px; width: 200px; background-color: black; color: white; font-size: 21px; border-radius: 15px;"/>
-		<a id="link" href="http://confsitonew.maxapp.eu/Agenti/"></a>
+		<a id="link" href="http://confsitonew.maxapp.eu/Agenti/">Test</a>
 		
 	</body>
 </html>
