--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 			<img src="logo.png" style="height:60px;margin-top:10px;margin-bottom:10px;"/>
 		</div>
 		<p style="font-size: 20px; color: gray;" id="intro">
-			Recupero informazioni in corso<br>
+			Recuperando información...<br>
 			<div style="text-align:center" id="intro2">
 				<img style="width:50%" src="load.gif"/>
 			</div>
 		</p>
 		
-		<a id="centra" href="http://conformgest.maxapp.eu/agenti" style="display:none;margin-top: 150px; height: 50px; width: 200px; background-color: black; color: white; font-size: 21px; border-radius: 15px;border:1px solid white;text-align:center;"><span style="display: block; padding-top: 10px;">Accedi</span></a>
+		<a id="centra" href="http://conformgest.maxapp.eu/agenti" style="display:none;margin-top: 150px; height: 50px; width: 200px; background-color: black; color: white; font-size: 21px; border-radius: 15px;border:1px solid white;text-align:center;"><span style="display: block; padding-top: 10px;">Iniciar Sesión</span></a>
 
 	</body>
 </html>
