--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<body onload="loaded();">
 		
 		<p style="font-size: 20px; color: gray;" id="intro">
-			Recuperando información...<br>
+			Recuperando informaci&oacute;n...<br>
 			<div style="text-align:center" id="intro2">
 				<img style="width:50%" src="load.gif"/>
 			</div>
 		</p>
 		
-		<a id="centra" href="http://conformgest.maxapp.eu/agenti_es" style="display:none;margin-top: 150px; height: 50px; width: 200px; background-color: black; color: white; font-size: 21px; border-radius: 15px;border:1px solid white;text-align:center;"><span style="display: block; padding-top: 10px;">Iniciar Sesión</span></a>
+		<a id="centra" href="http://conformgest.maxapp.eu/agenti_es" style="display:none;margin-top: 150px; height: 50px; width: 200px; background-color: black; color: white; font-size: 21px; border-radius: 15px;border:1px solid white;text-align:center;"><span style="display: block; padding-top: 10px;">Iniciar Sesi&oacute;n</span></a>
 
 	</body>
 </html>
