--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 	</head>
 	
 	<body onload="loaded();">
-		
+		<div id="logoContainer" style="background-color:#ddd;text-align:center;">
+			<img src="logo.png" style="height:60px;margin-top:10px;margin-bottom:10px;"/>
+		</div>
 		<p style="font-size: 20px; color: gray;" id="intro">
-			Recuperando informaci&oacute;n...<br>
+			Recupero informazioni in corso<br>
 			<div style="text-align:center" id="intro2">
 				<img style="width:50%" src="load.gif"/>
 			</div>
 		</p>
 		
-		<a id="centra" href="http://conformgest.maxapp.eu/agenti_es" style="display:none;margin-top: 150px; height: 50px; width: 200px; background-color: black; color: white; font-size: 21px; border-radius: 15px;border:1px solid white;text-align:center;"><span style="display: block; padding-top: 10px;">Iniciar Sesi&oacute;n</span></a>
+		<a id="centra" href="http://conformgest.maxapp.eu/agenti" style="display:none;margin-top: 150px; height: 50px; width: 200px; background-color: black; color: white; font-size: 21px; border-radius: 15px;border:1px solid white;text-align:center;"><span style="display: block; padding-top: 10px;">Accedi</span></a>
 
 	</body>
 </html>
