--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+
 <html>
 	<head>
+		<preference name="phonegap-version" value="cli-6.4.0" />
 		<script type="text/javascript" src="script.js"></script>
 		<style>
 			body { 
